--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                             Backend services using node.js, mongodb, rabbitMQ, typescript and dot.net.
                                         </li>
                                         <li>
-                                            OTT applications that gives a TV experience in the Web Browser, using angular.js, less and typescript.
+                                            OTT applications that enables a TV experience in the Web Browser, using angular.js, less and typescript.
                                         </li>
                                         <li>
                                             Integrating Jenkins for continuous integration and delivery.
