--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 </head>
 
 <body>
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-77949027-1', 'auto');
+        ga('send', 'pageview');
+    </script>
     <div class="container">
         <div class="resume">
             <header class="page-header">
@@ -59,8 +68,8 @@
                                         <div class="col-xs-12 social-icons icon-circle list-unstyled list-inline ">
                                             <li><a href="https://github.com/Talento90"><i class="fa fa-github"></i></a> </li>
                                             <li><a href="https://twitter.com/Talento90"><i class="fa fa-twitter"></i></a> </li>
-                                            <li><a href="https://www.linkedin.com/in/marcotalento"><i class="fa fa-linkedin"></i></a> </li>
-                                            <li><a href="https://speakerdeck.com/talento90"><i class="fa fa-microphone"></i></a> </li>
+                                            <li><a href="https://www.linkedin.com/in/marcotalento"><i class="fa fa-linkedin"></i></a>                                                </li>
+                                            <li><a href="https://speakerdeck.com/talento90"><i class="fa fa-microphone"></i></a>                                                </li>
                                         </div>
                                     </div>
 
