--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@
                             <h4>Experience</h4>
                             <ul class="list-group">
                                 <a class="list-group-item inactive-link">
-                                    <h4 class="list-group-item-heading">R&D Software Engineer (2014 - currently)</h4>
+                                    <h4 class="list-group-item-heading">R&D Software Engineer (2014 Fev - currently)</h4>
                                     <p>Working at the number 1º Telco in Portugal (NOS) creating scalable backends and OTT aplications.</p>
                                     <ul>
                                         <li>
-                                            Backend services using node.js, mongodb, rabbitMQ, typescript and dot.net.
+                                            Backend services using node.js, mongodb, rabbitMQ, typescript and dotnet.
                                         </li>
                                         <li>
                                             OTT applications that enables a TV experience in the Web Browser, using angular.js, less and typescript.
@@ -110,7 +110,7 @@
                                     </ul>
                                 </a>
                                 <a class="list-group-item inactive-link">
-                                    <h4 class="list-group-item-heading">Software Developer at Safira (2013)</h4>
+                                    <h4 class="list-group-item-heading">Software Developer at Safira (2013 Aug - Fev 2014)</h4>
                                     <p>Developing applications in BUA.</p>
                                     <ul>
                                         <li>
