--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="resume">
             <header class="page-header">
                 <h1 class="page-title">Resume of Marco Talento</h1>
-                <small> <i class="fa fa-clock-o"></i> Last Updated on: <time>14/05/2016</time></small>
+                <small> <i class="fa fa-clock-o"></i> Last Updated on: <time>21/08/2016</time></small>
             </header>
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
@@ -66,6 +66,7 @@
 
                                     <div class="row text-center">
                                         <div class="col-xs-12 social-icons icon-circle list-unstyled list-inline ">
+                                            <li><a href="assets/marco-talento-cv.pdf"><i class="fa fa-file"></i></a>
                                             <li><a href="https://github.com/Talento90"><i class="fa fa-github"></i></a> </li>
                                             <li><a href="https://twitter.com/Talento90"><i class="fa fa-twitter"></i></a> </li>
                                             <li><a href="https://www.linkedin.com/in/marcotalento"><i class="fa fa-linkedin"></i></a>                                                </li>
@@ -93,7 +94,7 @@
                             <ul class="list-group">
                                 <a class="list-group-item inactive-link">
                                     <h4 class="list-group-item-heading">R&D Software Engineer (2014 Fev - currently)</h4>
-                                    <p>Working at the number 1º Telco in Portugal (NOS) creating scalable backends and OTT aplications.</p>
+                                    <p>Working at the number 1º Telco in Portugal (NOS) creating scalable backends and OTT applications.</p>
                                     <ul>
                                         <li>
                                             Backend services using node.js, mongodb, rabbitMQ, typescript and dotnet.
@@ -102,10 +103,19 @@
                                             OTT applications that enables a TV experience in the Web Browser, using angular.js, less and typescript.
                                         </li>
                                         <li>
-                                            Integrating Jenkins for continuous integration and delivery.
+                                            Unit and Integration Tests
+                                        </li>
+                                        <li>
+                                            Using Jenkins Pipeline for continuous integration and delivery.
                                         </li>
                                         <li>
                                             Responsible to maintain and add new features to internal SDK's.
+                                        </li>
+                                        <li>
+                                            Code Reviewing.
+                                        </li>
+                                        <li>
+                                            Interviewing Junior candidates.
                                         </li>
                                     </ul>
                                 </a>
