--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
+    
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -69,8 +70,9 @@
                                             <li><a href="assets/marco-talento-cv.pdf"><i class="fa fa-file"></i></a>
                                             <li><a href="https://github.com/Talento90"><i class="fa fa-github"></i></a> </li>
                                             <li><a href="https://twitter.com/Talento90"><i class="fa fa-twitter"></i></a> </li>
-                                            <li><a href="https://www.linkedin.com/in/marcotalento"><i class="fa fa-linkedin"></i></a>                                                </li>
-                                            <li><a href="https://speakerdeck.com/talento90"><i class="fa fa-microphone"></i></a>                                                </li>
+                                            <li><a href="https://www.linkedin.com/in/marcotalento"><i class="fa fa-linkedin"></i></a></li>
+                                            <li><a href="https://speakerdeck.com/talento90"><i class="fa fa-microphone"></i></a></li>
+                                            <li><a href="https://medium.com/@Talento90"><i class="fa fa-medium"></i></a></li>
                                         </div>
                                     </div>
 
@@ -137,12 +139,12 @@
                                     aria-hidden="true"></i> Beer
                             </p>
                         </div>
-                        <div class="bs-callout bs-callout-danger">
+                        <!-- <div class="bs-callout bs-callout-danger">
                             <h4>Blog</h4>
                             <ul id="blog-list" class="list-group">
                                 <li id="blog-list-spinner" class="text-center list-group-item"><i class="text-center fa-4x fa fa-spinner fa-pulse"></i></li>
                             </ul>
-                        </div>
+                        </div> -->
                         <div class="bs-callout bs-callout-brand">
                             <h4>Extras</h4>
                             <ul class="list-group">
@@ -166,7 +168,7 @@
     <!-- Javascript -->
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/main.min.js"></script>
+    <!-- <script type="text/javascript" src="js/main.min.js"></script> -->
 </body>
 
 </html>
