--- a/index.html
+++ b/index.html
@@ -1,174 +1,70 @@
 <!DOCTYPE html>
-<!--[if IE 8]> <html lang="en" class="ie8"> <![endif]-->
-<!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
-<!--[if !IE]><!-->
 <html lang="en">
-<!--<![endif]-->
-
 <head>
     <title>Hello, I'm Marco</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Marco Talento CV Resume">
+    <meta name="description" content="Marco Talento Card">
     <meta name="author" content="Talento90">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic'
-        rel='stylesheet' type='text/css'>
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 
 <body>
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-        ga('create', 'UA-77949027-1', 'auto');
-        ga('send', 'pageview');
-    </script>
-    <div class="container">
-        <div class="resume">
-            <header class="page-header">
-                <h1 class="page-title">Resume of Marco Talento</h1>
-                <small> <i class="fa fa-clock-o"></i> Last Updated on: <time>21/08/2016</time></small>
-            </header>
-            <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
-                    <div class="panel panel-default">
-                        <div class="panel-heading resume-heading">
-                            <div class="row">
-                                <div class="col-lg-12">
-                                    <div class="col-xs-12 col-sm-4">
-                                        <figure>
-                                            <img class="img-circle img-responsive" alt="" src="/img/me.jpg">
-                                        </figure>
-                                    </div>
-
-                                    <div class="col-xs-12 col-sm-8">
-                                        <ul class="list-group">
-                                            <li class="list-group-item"><i class="fa fa-user" aria-hidden="true"></i> Marco Talento</li>
-                                            <li class="list-group-item"><i class="fa fa-laptop" aria-hidden="true"></i> Software Engineer</li>
-                                            <li class="list-group-item"><i class="fa fa-skype" aria-hidden="true"></i> mtalento90</li>
-                                            <li class="list-group-item"><i class="fa fa-envelope"></i><a href="mailto:marcotalento90@gmail.com"> marcotalento90@gmail.com</a></li>
-                                        </ul>
-                                    </div>
-
-                                    <div class="row text-center">
-                                        <div class="col-xs-12 social-icons icon-circle list-unstyled list-inline ">
-                                            <li><a href="assets/marco-talento-cv.pdf"><i class="fa fa-file"></i></a>
-                                            <li><a href="https://github.com/Talento90"><i class="fa fa-github"></i></a> </li>
-                                            <li><a href="https://twitter.com/Talento90"><i class="fa fa-twitter"></i></a> </li>
-                                            <li><a href="https://www.linkedin.com/in/marcotalento"><i class="fa fa-linkedin"></i></a></li>
-                                            <li><a href="https://speakerdeck.com/talento90"><i class="fa fa-microphone"></i></a></li>
-                                            <li><a href="https://medium.com/@Talento90"><i class="fa fa-medium"></i></a></li>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="bs-callout bs-callout-info">
-                            <h4>Summary</h4>
-                            <p>I'm a Software Engineer that believes software must be simple, intuitive and reliable. I’m currently
-                                working in Lisbon (Portugal) at the top telecommunications provider in the country. My main
-                                interests are api’s design, best software practices, distributed systems and continuous integration
-                                (CI). Also I’m a curious guy and always hungry for new challenges.</p>
-
-                            <p>Besides work, I like to cook 0′s and 1′s and create excellent and unique recipes, always using
-                                some special spices.</p>
-
-                            <p>I like to be original, from the kitchen to everything in my life!</p>
-                        </div>
-                        <div class="bs-callout bs-callout-success">
-                            <h4>Experience</h4>
-                            <ul class="list-group">
-                                <a class="list-group-item inactive-link">
-                                    <h4 class="list-group-item-heading">R&D Software Engineer (2014 Fev - currently)</h4>
-                                    <p>Working at the number 1º Telco in Portugal (NOS) creating scalable backends and OTT applications.</p>
-                                    <ul>
-                                        <li>
-                                            Backend services using node.js, mongodb, rabbitMQ, typescript and dotnet.
-                                        </li>
-                                        <li>
-                                            OTT applications that enables a TV experience in the Web Browser, using angular.js, less and typescript.
-                                        </li>
-                                        <li>
-                                            Unit and Integration Tests
-                                        </li>
-                                        <li>
-                                            Using Jenkins Pipeline for continuous integration and delivery.
-                                        </li>
-                                        <li>
-                                            Responsible to maintain and add new features to internal SDK's.
-                                        </li>
-                                        <li>
-                                            Code Reviewing.
-                                        </li>
-                                        <li>
-                                            Interviewing Junior candidates.
-                                        </li>
-                                    </ul>
-                                </a>
-                                <a class="list-group-item inactive-link">
-                                    <h4 class="list-group-item-heading">Software Developer at Safira (2013 Aug - Fev 2014)</h4>
-                                    <p>Developing applications in BUA.</p>
-                                    <ul>
-                                        <li>
-                                            System for managing the core business of a Social Security system.
-                                        </li>
-                                    </ul>
-                                </a>
-                            </ul>
-                        </div>
-                        <div class="bs-callout bs-callout-warning">
-                            <h4>Interests</h4>
-                            <p>
-                                <i class="fa fa-code" aria-hidden="true"></i> Programming <i class="fa fa-futbol-o" aria-hidden="true"></i>                                Sports <i class="fa fa-music" aria-hidden="true"></i> Music <i class="fa fa-plane" aria-hidden="true"></i>                                Travel <i class="fa fa-graduation-cap" aria-hidden="true"></i> Education <i class="fa fa-beer"
-                                    aria-hidden="true"></i> Beer
-                            </p>
-                        </div>
-                        <!-- <div class="bs-callout bs-callout-danger">
-                            <h4>Blog</h4>
-                            <ul id="blog-list" class="list-group">
-                                <li id="blog-list-spinner" class="text-center list-group-item"><i class="text-center fa-4x fa fa-spinner fa-pulse"></i></li>
-                            </ul>
-                        </div> -->
-                        <div class="bs-callout bs-callout-brand">
-                            <h4>Extras</h4>
-                            <ul class="list-group">
-                                <li class="list-group-item"><i class="fa fa-users"></i> <a target="_blank" href="http://sharednode.org/">Sharednode Founder</a>                                    - Community focused on sharing ideas, experiences and projects.</li>
-                                <li class="list-group-item"><i class="fa fa-book" aria-hidden="true"></i> <a target="_blank" href="http://www.sciencedirect.com/science/article/pii/S221201731400437X"> Healnect – A System to Help Patients of Physical Therapy Achieve their Therapeutic Exercises</a></li>
-                                <li class="list-group-item"><i class="fa fa-flag" aria-hidden="true"></i> LLP/Erasmus program (5 Months) - University
-                                    of Information Technologies, Brno, Czech Republic</li>
-                                <li class="list-group-item"><i class="fa fa-university" aria-hidden="true"></i> Bachelor of Engineering - Computer Engineering
-                                    (2008-2013)
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <aside class="profile-card">
+        <header>
+            <a target="_blank" href="#">
+                <img src="img/me.png" class="hoverZoomLink">
+            </a>
+            <h1>
+                Marco Talento
+            </h1>
+            <h2>
+                Software Engineer
+            </h2>
+        </header>
+        <div class="profile-bio">
+            <p>
+                I'm a Software Engineer that believes software must be <b>simple</b>, <b>intuitive</b> and <b>reliable</b>.
+            </p>
         </div>
-    </div>
-    <footer class="text-center panel-footer">
-        Built with: <a href="http://getbootstrap.com/">bootstrap</a> and <a href="http://fontawesome.io/">fontawesome</a>
-    </footer>
-    <!-- Javascript -->
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <!-- <script type="text/javascript" src="js/main.min.js"></script> -->
+        <div class="profile-bio interests">
+            <p>
+                <i class="fas fa-beer"></i>
+                <i class="fas fa-plane"></i>
+                <i class="fas fa-code"></i>
+                <i class="far fa-futbol"></i>
+                <i class="fas fa-running"></i>
+                <i class="fas fa-utensils"></i>
+                <i class="fas fa-music"></i>
+            </p>
+        </div>
+        <ul class="profile-social-links">
+            <li>
+                <a target="_blank" href="https://github.com/talento90">
+                    <i class="fab fa-github fa-3x"></i>
+                </a>
+            </li>
+            <li>
+                <a target="_blank" href="https://twitter.com/Talento90">
+                    <i class="fab fa-twitter fa-3x"></i>
+                </a>
+            </li>
+            <li>
+                <a target="_blank" href="https://www.linkedin.com/in/marcotalento">
+                    <i class="fab fa-linkedin fa-3x"></i>
+                </a>
+            </li>
+            <li>
+                <a target="_blank" href="assets/marco-talento-cv.pdf">
+                    <i class="fas fa-file-alt fa-3x"></i>
+                </a>
+            </li>
+        </ul>
+    </aside>
 </body>
 
 </html>
